# PingPong_Solo

./: CMakeLists.txt  README.md  main.cpp
app/: Ping_Pong
include/: Balle.hpp  Constant.hpp  Game.hpp  Palette.hpp
src/: Balle.cpp  Game.cpp  Palette.cpp  main.cpp
